@@ -1,6 +1,5 @@
 TODO List:
 * prepend and append command support
-* bdb compact support
 * more reliable replication
 * more friendly item buffer management
 * RoundRobin does not solve blocked well
